--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </button>
     <div class="dropdown-content">
       <a href="./resume/index.html">Resume</a>
-      <a href="#">Future Project</a>
+      <a href="./Weather App/index.html">Weather App</a>
       <a href="#">Future Project</a>
     </div>
   </div> 
