--- a/resume/index.html
+++ b/resume/index.html
@@ -31,7 +31,7 @@
       <header>
         <div class="content-wrap">
           <h1>Elvis Moyolema</h1>
-          <h2>Upcoming Back-end Web Developer</h2>
+          <h2>Up-and-coming Back-end Web Developer</h2>
           <p>As an upcoming Back-end Web Developer, I primarily focus on how the site works "behind the scenes"</p>
           </div>
       </header>
