--- a/resume/index.html
+++ b/resume/index.html
@@ -19,8 +19,9 @@
         </button>
         <div class="dropdown-content">
           <a href="#resume">Resume</a>
-          <a href="#">Future Project</a>
-          <a href="#">Future Project</a>
+          <a href="../Weather App/index.html">Weather App</a>
+          <a href="https://zybooks-172--elvismoyo.repl.co/">Node Practice</a>
+          
         </div>
       </div> 
       <a href="#about">About</a>
@@ -159,7 +160,6 @@
           <ul class="contact-list">
             <li><a href="mailto:elvismoyo1999@gmail.com">elvismoyo1999@gmail.com</a></li>
             <li><a href="https://github.com/Elvismoyo" target="_blank">GitHub</a></li>
-            <li><a href="http://twitter.com/" target="_blank">Twitter</a></li>
             <li><a href="https://www.linkedin.com/in/elvis-moyolema-16912b124/" target="_blank">LinkedIn</a></li>
           </ul>
         </div>
